* FIX Replace Sinatra quote with Godfather movie reference on server exit (@danishkhan)
* FIX #743 Correctly parse arguments to padrino binary
* FIX #745 Cache now stores response and content_type (@sumskyi)
* FIX #676 Adds support for trinidad web server on jruby
* FIX #736 Logger refactoring to support other loggers (@skade)
* NEW Adds alias 'escape_javascript' for 'js_escape_html' method

== 0.10.5

* FIX #701 make static script assets work again for generator

== 0.10.4

* FIX #690 adds proper require for sinatra-flash in Gemfile
* FIX #691 fixes logger error when rendering templates
* FIX #692 ensure :static_cache_control is properly applied
* FIX #689 status messages to common padrino logger (@udzura)
* FIX logger issue when displaying cache logs
* FIX #694 issue with minitest generator (@runa)
* NEW Silence YARD undocumented warnings in padrino gems

== 0.10.3

* NEW Upgrade to recently released Sinatra 1.3
* FIX #679 replaces rack-flash with sinatra-flash
* NEW #667 Adds mintest testing component to generator
* FIX #634 Removes less gem dependency for less gen
* NEW #662 create "content_for?" helper (@mlightner)
* FIX #669 Fixes YAML locale files to be psych compliant (@skade)
* NEW Fixes logger to be much cleaner with better formatting
* FIX issue with generator runner for https templates (@xavierRiley)
* FIX #669 YML locale files are now psych compliant
* NEW #658 removes shoulda and switch to minitest (with aliases)
* NEW #657 Converts RDoc to YARD and improve all docs
* FIX Document example of Padrino::Admin::AccessControl (@benjaminoakes)
* NEW Adds Latvian locale translation (@ugisozols)
* FIX #686 Halt status with code responds as expected

== 0.10.2

* NEW support for TravisCI with build configurations
* NEW support of mysql2 when using sequel as adapter (@rafaelss)
* NEW #636 print which views are called in log when in development mode (@minikomi)
* NEW support of ActiveRecord 3.1 and ActiveSupport 3.1