@@ -1,10 +1,13 @@
-# http://about.travis-ci.org/docs/user/build-configuration/
-before_install: 'gem update --system'
+# before_install: sudo apt-get install redis-server libmemcache-dev memcached
+install:
+  - gem update --system
+  - bundle update
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
   - ree
+  - rbx
   - ruby-head
 
 notifications:
