@@ -146,10 +146,10 @@ describe "AssetTagHelpers" do
   context 'for #image_tag method' do
     should "display image tag absolute link with no options" do
       time = stop_time_for_test
-      assert_has_tag('img', :src => "/absolute/pic.gif?#{time.to_i}") { image_tag('/absolute/pic.gif') }
+      assert_has_tag('img', :src => "/absolute/pic.gif") { image_tag('/absolute/pic.gif') }
     end
 
-    should "display image tag absolute link with specified uri root" do
+    should "display image tag relative link with specified uri root" do
       time = stop_time_for_test
       self.class.stubs(:uri_root).returns("/blog")
       assert_has_tag('img', :src => "/blog/images/relative/pic.gif?#{time.to_i}") { image_tag('relative/pic.gif') }
@@ -196,7 +196,7 @@ describe "AssetTagHelpers" do
       time = stop_time_for_test
       expected_options = { :media => "screen", :rel => "stylesheet", :type => "text/css" }
       actual_html = stylesheet_link_tag('/css/style')
-      assert_has_tag('link', expected_options.merge(:href => "/css/style.css?#{time.to_i}")) { actual_html }
+      assert_has_tag('link', expected_options.merge(:href => "/css/style.css")) { actual_html }
     end
 
     should "display stylesheet link item with uri root" do
@@ -252,7 +252,7 @@ describe "AssetTagHelpers" do
     should "display javascript item with absolute path" do
       time = stop_time_for_test
       actual_html = javascript_include_tag('/js/application')
-      assert_has_tag('script', :src => "/js/application.js?#{time.to_i}", :type => "text/javascript") { actual_html }
+      assert_has_tag('script', :src => "/js/application.js", :type => "text/javascript") { actual_html }
     end
 
     should "display javascript item with uri root" do
